--- a/templates/index.html
+++ b/templates/index.html
@@ -41,5 +41,7 @@
         </div>
         <button class="btn btn-secondary mt-4" type="button">Submit</button>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
